Update edk2 libs

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,37 +1,49 @@
 [submodule "CryptoPkg/Library/OpensslLib/openssl"]
-	path = CryptoPkg/Library/OpensslLib/openssl
-	url = https://github.com/openssl/openssl
+    path = CryptoPkg/Library/OpensslLib/openssl
+    url = https://github.com/openssl/openssl
+    branch = openssl-3.0
 [submodule "SoftFloat"]
-	path = ArmPkg/Library/ArmSoftFloatLib/berkeley-softfloat-3
-	url = https://github.com/ucb-bar/berkeley-softfloat-3.git
+    path = ArmPkg/Library/ArmSoftFloatLib/berkeley-softfloat-3
+    url = https://github.com/ucb-bar/berkeley-softfloat-3.git
+    branch = master
 [submodule "UnitTestFrameworkPkg/Library/CmockaLib/cmocka"]
-	path = UnitTestFrameworkPkg/Library/CmockaLib/cmocka
-	url = https://github.com/tianocore/edk2-cmocka.git
+    path = UnitTestFrameworkPkg/Library/CmockaLib/cmocka
+    url = https://git.cryptomilk.org/projects/cmocka.git
+    branch = stable-1.1
 [submodule "MdeModulePkg/Universal/RegularExpressionDxe/oniguruma"]
-	path = MdeModulePkg/Universal/RegularExpressionDxe/oniguruma
-	url = https://github.com/kkos/oniguruma
+    path = MdeModulePkg/Universal/RegularExpressionDxe/oniguruma
+    url = https://github.com/kkos/oniguruma
+    branch= 7.0
 [submodule "MdeModulePkg/Library/BrotliCustomDecompressLib/brotli"]
-	path = MdeModulePkg/Library/BrotliCustomDecompressLib/brotli
-	url = https://github.com/google/brotli
+    path = MdeModulePkg/Library/BrotliCustomDecompressLib/brotli
+    url = https://github.com/google/brotli
+    branch = v1.1
 [submodule "BaseTools/Source/C/BrotliCompress/brotli"]
-	path = BaseTools/Source/C/BrotliCompress/brotli
-	url = https://github.com/google/brotli
-	ignore = untracked
+    path = BaseTools/Source/C/BrotliCompress/brotli
+    url = https://github.com/google/brotli
+    branch = master
+    ignore = untracked
 [submodule "RedfishPkg/Library/JsonLib/jansson"]
-	path = RedfishPkg/Library/JsonLib/jansson
-	url = https://github.com/akheron/jansson
+    path = RedfishPkg/Library/JsonLib/jansson
+    url = https://github.com/akheron/jansson
+    branch = master
 [submodule "UnitTestFrameworkPkg/Library/GoogleTestLib/googletest"]
-	path = UnitTestFrameworkPkg/Library/GoogleTestLib/googletest
-	url = https://github.com/google/googletest.git
+    path = UnitTestFrameworkPkg/Library/GoogleTestLib/googletest
+    url = https://github.com/google/googletest.git
+    branch = main
 [submodule "UnitTestFrameworkPkg/Library/SubhookLib/subhook"]
-	path = UnitTestFrameworkPkg/Library/SubhookLib/subhook
-	url = https://github.com/Zeex/subhook.git
+    path = UnitTestFrameworkPkg/Library/SubhookLib/subhook
+    url = https://github.com/Zeex/subhook.git
+    branch = master
 [submodule "MdePkg/Library/BaseFdtLib/libfdt"]
-	path = MdePkg/Library/BaseFdtLib/libfdt
-	url = https://github.com/devicetree-org/pylibfdt.git
+    path = MdePkg/Library/BaseFdtLib/libfdt
+    url = https://github.com/devicetree-org/pylibfdt.git
+    barnch = main
 [submodule "MdePkg/Library/MipiSysTLib/mipisyst"]
-	path = MdePkg/Library/MipiSysTLib/mipisyst
-	url = https://github.com/MIPI-Alliance/public-mipi-sys-t.git
+    path = MdePkg/Library/MipiSysTLib/mipisyst
+    url = https://github.com/MIPI-Alliance/public-mipi-sys-t.git
+    branch = main
 [submodule "CryptoPkg/Library/MbedTlsLib/mbedtls"]
-	path = CryptoPkg/Library/MbedTlsLib/mbedtls
-	url = https://github.com/ARMmbed/mbedtls
+    path = CryptoPkg/Library/MbedTlsLib/mbedtls
+    url = https://github.com/Mbed-TLS/mbedtls
+    branch = development
